Package_Tools/glib/Package_Tools/include-C/glib-2.0/gobject/in_arbeit/gsignal.pp


{ --- signals ---  }
(* Const before type ignored *)

function g_signal_newv(signal_name:Pgchar; itype:TGType; signal_flags:TGSignalFlags; class_closure:PGClosure; accumulator:TGSignalAccumulator; 
           accu_data:Tgpointer; c_marshaller:TGSignalCMarshaller; return_type:TGType; n_params:Tguint; param_types:PGType):Tguint;cdecl;external;
(* Const before type ignored *)
function g_signal_new_valist(signal_name:Pgchar; itype:TGType; signal_flags:TGSignalFlags; class_closure:PGClosure; accumulator:TGSignalAccumulator; 
           accu_data:Tgpointer; c_marshaller:TGSignalCMarshaller; return_type:TGType; n_params:Tguint; args:Tva_list):Tguint;cdecl;external;
(* Const before type ignored *)
function g_signal_new(signal_name:Pgchar; itype:TGType; signal_flags:TGSignalFlags; class_offset:Tguint; accumulator:TGSignalAccumulator; 
           accu_data:Tgpointer; c_marshaller:TGSignalCMarshaller; return_type:TGType; n_params:Tguint; args:array of const):Tguint;cdecl;external;
function g_signal_new(signal_name:Pgchar; itype:TGType; signal_flags:TGSignalFlags; class_offset:Tguint; accumulator:TGSignalAccumulator; 
           accu_data:Tgpointer; c_marshaller:TGSignalCMarshaller; return_type:TGType; n_params:Tguint):Tguint;cdecl;external;
(* Const before type ignored *)
function g_signal_new_class_handler(signal_name:Pgchar; itype:TGType; signal_flags:TGSignalFlags; class_handler:TGCallback; accumulator:TGSignalAccumulator; 
           accu_data:Tgpointer; c_marshaller:TGSignalCMarshaller; return_type:TGType; n_params:Tguint; args:array of const):Tguint;cdecl;external;
function g_signal_new_class_handler(signal_name:Pgchar; itype:TGType; signal_flags:TGSignalFlags; class_handler:TGCallback; accumulator:TGSignalAccumulator; 
           accu_data:Tgpointer; c_marshaller:TGSignalCMarshaller; return_type:TGType; n_params:Tguint):Tguint;cdecl;external;
procedure g_signal_set_va_marshaller(signal_id:Tguint; instance_type:TGType; va_marshaller:TGSignalCVaMarshaller);cdecl;external;
(* Const before type ignored *)
procedure g_signal_emitv(instance_and_params:PGValue; signal_id:Tguint; detail:TGQuark; return_value:PGValue);cdecl;external;
procedure g_signal_emit_valist(instance:Tgpointer; signal_id:Tguint; detail:TGQuark; var_args:Tva_list);cdecl;external;
procedure g_signal_emit(instance:Tgpointer; signal_id:Tguint; detail:TGQuark; args:array of const);cdecl;external;
procedure g_signal_emit(instance:Tgpointer; signal_id:Tguint; detail:TGQuark);cdecl;external;
(* Const before type ignored *)
procedure g_signal_emit_by_name(instance:Tgpointer; detailed_signal:Pgchar; args:array of const);cdecl;external;
procedure g_signal_emit_by_name(instance:Tgpointer; detailed_signal:Pgchar);cdecl;external;
(* Const before type ignored *)
function g_signal_lookup(name:Pgchar; itype:TGType):Tguint;cdecl;external;
(* Const before type ignored *)
function g_signal_name(signal_id:Tguint):Pgchar;cdecl;external;
procedure g_signal_query(signal_id:Tguint; query:PGSignalQuery);cdecl;external;
function g_signal_list_ids(itype:TGType; n_ids:Pguint):Pguint;cdecl;external;
(* Const before type ignored *)
function g_signal_is_valid_name(name:Pgchar):Tgboolean;cdecl;external;
(* Const before type ignored *)
function g_signal_parse_name(detailed_signal:Pgchar; itype:TGType; signal_id_p:Pguint; detail_p:PGQuark; force_detail_quark:Tgboolean):Tgboolean;cdecl;external;
function g_signal_get_invocation_hint(instance:Tgpointer):PGSignalInvocationHint;cdecl;external;
{ --- signal emissions ---  }
procedure g_signal_stop_emission(instance:Tgpointer; signal_id:Tguint; detail:TGQuark);cdecl;external;
(* Const before type ignored *)
procedure g_signal_stop_emission_by_name(instance:Tgpointer; detailed_signal:Pgchar);cdecl;external;
function g_signal_add_emission_hook(signal_id:Tguint; detail:TGQuark; hook_func:TGSignalEmissionHook; hook_data:Tgpointer; data_destroy:TGDestroyNotify):Tgulong;cdecl;external;
procedure g_signal_remove_emission_hook(signal_id:Tguint; hook_id:Tgulong);cdecl;external;
{ --- signal handlers ---  }
function g_signal_has_handler_pending(instance:Tgpointer; signal_id:Tguint; detail:TGQuark; may_be_blocked:Tgboolean):Tgboolean;cdecl;external;
function g_signal_connect_closure_by_id(instance:Tgpointer; signal_id:Tguint; detail:TGQuark; closure:PGClosure; after:Tgboolean):Tgulong;cdecl;external;
(* Const before type ignored *)
function g_signal_connect_closure(instance:Tgpointer; detailed_signal:Pgchar; closure:PGClosure; after:Tgboolean):Tgulong;cdecl;external;
(* Const before type ignored *)
function g_signal_connect_data(instance:Tgpointer; detailed_signal:Pgchar; c_handler:TGCallback; data:Tgpointer; destroy_data:TGClosureNotify; 
           connect_flags:TGConnectFlags):Tgulong;cdecl;external;
procedure g_signal_handler_block(instance:Tgpointer; handler_id:Tgulong);cdecl;external;
procedure g_signal_handler_unblock(instance:Tgpointer; handler_id:Tgulong);cdecl;external;
procedure g_signal_handler_disconnect(instance:Tgpointer; handler_id:Tgulong);cdecl;external;
function g_signal_handler_is_connected(instance:Tgpointer; handler_id:Tgulong):Tgboolean;cdecl;external;
function g_signal_handler_find(instance:Tgpointer; mask:TGSignalMatchType; signal_id:Tguint; detail:TGQuark; closure:PGClosure; 
           func:Tgpointer; data:Tgpointer):Tgulong;cdecl;external;
function g_signal_handlers_block_matched(instance:Tgpointer; mask:TGSignalMatchType; signal_id:Tguint; detail:TGQuark; closure:PGClosure; 
           func:Tgpointer; data:Tgpointer):Tguint;cdecl;external;
function g_signal_handlers_unblock_matched(instance:Tgpointer; mask:TGSignalMatchType; signal_id:Tguint; detail:TGQuark; closure:PGClosure; 
           func:Tgpointer; data:Tgpointer):Tguint;cdecl;external;
function g_signal_handlers_disconnect_matched(instance:Tgpointer; mask:TGSignalMatchType; signal_id:Tguint; detail:TGQuark; closure:PGClosure; 
           func:Tgpointer; data:Tgpointer):Tguint;cdecl;external;
procedure g_clear_signal_handler(handler_id_ptr:Pgulong; instance:Tgpointer);cdecl;external;
{ --- overriding and chaining ---  }
procedure g_signal_override_class_closure(signal_id:Tguint; instance_type:TGType; class_closure:PGClosure);cdecl;external;
(* Const before type ignored *)
procedure g_signal_override_class_handler(signal_name:Pgchar; instance_type:TGType; class_handler:TGCallback);cdecl;external;
(* Const before type ignored *)
procedure g_signal_chain_from_overridden(instance_and_params:PGValue; return_value:PGValue);cdecl;external;
procedure g_signal_chain_from_overridden_handler(instance:Tgpointer; args:array of const);cdecl;external;
procedure g_signal_chain_from_overridden_handler(instance:Tgpointer);cdecl;external;
{ --- convenience ---  }
{*
 * g_signal_connect:
 * @instance: the instance to connect to.
 * @detailed_signal: a string of the form "signal-name::detail".
 * @c_handler: the #GCallback to connect.
 * @data: data to pass to @c_handler calls.
 * 
 * Connects a [type@GObject.Callback] function to a signal for a particular object.
 * 
 * The handler will be called synchronously, before the default handler of the signal.
 * [func@GObject.signal_emit] will not return control until all handlers are called.
 *
 * See [memory management of signal handlers](signals.html#Memory_management_of_signal_handlers) for
 * details on how to handle the return value and memory management of @data.
 * 
 * This function cannot fail. If the given signal doesn’t exist, a critical
 * warning is emitted.
 *
 * Returns: the handler ID, of type `gulong` (always greater than 0)
  }
{ Intentionally not using G_CONNECT_DEFAULT here to avoid deprecation
 * warnings with older GLIB_VERSION_MAX_ALLOWED  }
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function g_signal_connect(instance,detailed_signal,c_handler,data : longint) : longint;

{*
 * g_signal_connect_after:
 * @instance: the instance to connect to.
 * @detailed_signal: a string of the form "signal-name::detail".
 * @c_handler: the #GCallback to connect.
 * @data: data to pass to @c_handler calls.
 * 
 * Connects a #GCallback function to a signal for a particular object.
 * 
 * The handler will be called synchronously, after the default handler of the signal.
 * 
 * This function cannot fail. If the given signal doesn’t exist, a critical
 * warning is emitted.
 *
 * Returns: the handler ID, of type `gulong` (always greater than 0)
  }
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function g_signal_connect_after(instance,detailed_signal,c_handler,data : longint) : longint;

{*
 * g_signal_connect_swapped:
 * @instance: the instance to connect to.
 * @detailed_signal: a string of the form "signal-name::detail".
 * @c_handler: the #GCallback to connect.
 * @data: data to pass to @c_handler calls.
 * 
 * Connects a #GCallback function to a signal for a particular object.
 * 
 * The instance on which the signal is emitted and @data will be swapped when 
 * calling the handler. This is useful when calling pre-existing functions to
 * operate purely on the @data, rather than the @instance: swapping the
 * parameters avoids the need to write a wrapper function.
 *
 * For example, this allows the shorter code:
 * |[<!-- language="C" -->
 * g_signal_connect_swapped (button, "clicked",
 *                           (GCallback) gtk_widget_hide, other_widget);
 * ]|
 *
 * Rather than the cumbersome:
 * |[<!-- language="C" -->
 * static void
 * button_clicked_cb (GtkButton *button, GtkWidget *other_widget)
 * 
 *     gtk_widget_hide (other_widget);
 * 
 *
 * ...
 *
 * g_signal_connect (button, "clicked",
 *                   (GCallback) button_clicked_cb, other_widget);
 * ]|
 * 
 * This function cannot fail. If the given signal doesn’t exist, a critical
 * warning is emitted.
 *
 * Returns: the handler ID, of type `gulong` (always greater than 0)
  }
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function g_signal_connect_swapped(instance,detailed_signal,c_handler,data : longint) : longint;

{*
 * g_signal_handlers_disconnect_by_func:
 * @instance: The instance to remove handlers from.
 * @func: The C closure callback of the handlers (useless for non-C closures).
 * @data: The closure data of the handlers' closures.
 * 
 * Disconnects all handlers on an instance that match @func and @data.
 * 
 * Returns: The number of handlers that matched.
  }
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function g_signal_handlers_disconnect_by_func(instance,func,data : longint) : longint;

{*
 * g_signal_handlers_disconnect_by_data:
 * @instance: The instance to remove handlers from
 * @data: the closure data of the handlers' closures
 *
 * Disconnects all handlers on an instance that match @data.
 *
 * Returns: The number of handlers that matched.
 *
 * Since: 2.32
  }
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function g_signal_handlers_disconnect_by_data(instance,data : longint) : longint;

{*
 * g_signal_handlers_block_by_func:
 * @instance: The instance to block handlers from.
 * @func: The C closure callback of the handlers (useless for non-C closures).
 * @data: The closure data of the handlers' closures.
 * 
 * Blocks all handlers on an instance that match @func and @data.
 * 
 * Returns: The number of handlers that matched.
  }
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function g_signal_handlers_block_by_func(instance,func,data : longint) : longint;
